[gd_scene load_steps=4 format=2]

[ext_resource path="res://sourcesans.tres" type="DynamicFont" id=1]
[ext_resource path="res://budgetscreen.gd" type="Script" id=2]
[ext_resource path="res://icons/staff.png" type="Texture" id=3]

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )

[node name="M" type="MarginContainer" parent="C"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 40
custom_constants/margin_left = 30
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="VBoxContainer" parent="C/M"]
margin_left = 30.0
margin_top = 40.0
margin_right = 690.0
margin_bottom = 1440.0

[node name="CHeader" type="HBoxContainer" parent="C/M/R"]
margin_right = 660.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="C/M/R/CHeader"]
margin_right = 660.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="C/M/R/CHeader/CenterContainer"]
margin_left = 263.0
margin_top = 20.0
margin_right = 396.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="C/M/R/CHeader/CenterContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 40.0
rect_min_size = Vector2( 38, 40 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="C/M/R/CHeader/CenterContainer/HBoxContainer"]
margin_left = 55.0
margin_top = 3.0
margin_right = 133.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Bureau"

[node name="Empty5" type="Label" parent="C/M/R"]
margin_top = 84.0
margin_right = 660.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="MonthlyBudget" type="Label" parent="C/M/R"]
margin_top = 128.0
margin_right = 660.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Monthly budget: â‚¬100,000 (17% spent)
Cost of ongoing operations: "

[node name="Empty6" type="Label" parent="C/M/R"]
margin_top = 203.0
margin_right = 660.0
margin_bottom = 243.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CHiring" type="HBoxContainer" parent="C/M/R"]
margin_top = 247.0
margin_right = 660.0
margin_bottom = 287.0

[node name="HiringLabel" type="Label" parent="C/M/R/CHiring"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Hiring intensity: X/100"

[node name="HiringSlider" type="HSlider" parent="C/M/R/CHiring"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
rounded = true
scrollable = false
tick_count = 15
ticks_on_borders = true

[node name="Empty7" type="Label" parent="C/M/R"]
margin_top = 291.0
margin_right = 660.0
margin_bottom = 331.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CUpskill" type="HBoxContainer" parent="C/M/R"]
margin_top = 335.0
margin_right = 660.0
margin_bottom = 375.0

[node name="UpskillLabel" type="Label" parent="C/M/R/CUpskill"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Upskiling intensity: X/100"

[node name="UpskillSlider" type="HSlider" parent="C/M/R/CUpskill"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
rounded = true
scrollable = false
tick_count = 15
ticks_on_borders = true

[node name="Empty9" type="Label" parent="C/M/R"]
margin_top = 379.0
margin_right = 660.0
margin_bottom = 419.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CTech" type="HBoxContainer" parent="C/M/R"]
margin_top = 423.0
margin_right = 660.0
margin_bottom = 463.0

[node name="TechLabel" type="Label" parent="C/M/R/CTech"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "R&D intensity: X/100"

[node name="TechSlider" type="HSlider" parent="C/M/R/CTech"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
rounded = true
scrollable = false
tick_count = 15
ticks_on_borders = true

[node name="Empty2" type="Label" parent="C/M/R"]
margin_top = 467.0
margin_right = 660.0
margin_bottom = 507.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CSkill" type="HBoxContainer" parent="C/M/R"]
margin_top = 511.0
margin_right = 660.0
margin_bottom = 551.0

[node name="SkillLabel" type="Label" parent="C/M/R/CSkill"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Tradecraft know-how level:"

[node name="SkillBar" type="ProgressBar" parent="C/M/R/CSkill"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
rounded = true

[node name="SkillChange" type="Label" parent="C/M/R"]
margin_top = 555.0
margin_right = 660.0
margin_bottom = 595.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "+30% in the last six months"
align = 2

[node name="Empty12" type="Label" parent="C/M/R"]
margin_top = 599.0
margin_right = 660.0
margin_bottom = 639.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CTech2" type="HBoxContainer" parent="C/M/R"]
margin_top = 643.0
margin_right = 660.0
margin_bottom = 683.0

[node name="TechLabel" type="Label" parent="C/M/R/CTech2"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Tradecraft technology level:"

[node name="TechBar" type="ProgressBar" parent="C/M/R/CTech2"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
rounded = true

[node name="TechChange" type="Label" parent="C/M/R"]
margin_top = 687.0
margin_right = 660.0
margin_bottom = 727.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "-//-"
align = 2

[node name="Empty13" type="Label" parent="C/M/R"]
margin_top = 731.0
margin_right = 660.0
margin_bottom = 771.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CExperience" type="HBoxContainer" parent="C/M/R"]
margin_top = 775.0
margin_right = 660.0
margin_bottom = 815.0

[node name="ExperienceLabel" type="Label" parent="C/M/R/CExperience"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Tradecraft experience:"

[node name="ExperienceBar" type="ProgressBar" parent="C/M/R/CExperience"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
rounded = true

[node name="ExperienceChange" type="Label" parent="C/M/R"]
margin_top = 819.0
margin_right = 660.0
margin_bottom = 859.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "-//-"
align = 2

[node name="Empty14" type="Label" parent="C/M/R"]
margin_top = 863.0
margin_right = 660.0
margin_bottom = 903.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CTrust" type="HBoxContainer" parent="C/M/R"]
margin_top = 907.0
margin_right = 660.0
margin_bottom = 947.0

[node name="TrustLabel" type="Label" parent="C/M/R/CTrust"]
margin_right = 328.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Internal trust level:"

[node name="TrustBar" type="ProgressBar" parent="C/M/R/CTrust"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
rounded = true

[node name="TrustChange" type="Label" parent="C/M/R"]
margin_top = 951.0
margin_right = 660.0
margin_bottom = 991.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "-//-"
align = 2

[node name="Empty15" type="Label" parent="C/M/R"]
margin_top = 995.0
margin_right = 660.0
margin_bottom = 1232.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 1 )

[node name="Empty3" type="Label" parent="C/M/R"]
margin_top = 1236.0
margin_right = 660.0
margin_bottom = 1276.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CReturn" type="HBoxContainer" parent="C/M/R"]
margin_top = 1280.0
margin_right = 660.0
margin_bottom = 1400.0

[node name="Label" type="Label" parent="C/M/R/CReturn"]
margin_top = 53.0
margin_right = 446.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="Return" type="Button" parent="C/M/R/CReturn"]
margin_left = 450.0
margin_right = 660.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "Return"
[connection signal="value_changed" from="C/M/R/CHiring/HiringSlider" to="." method="_on_HiringSlider_value_changed"]
[connection signal="value_changed" from="C/M/R/CUpskill/UpskillSlider" to="." method="_on_UpskillSlider_value_changed"]
[connection signal="value_changed" from="C/M/R/CTech/TechSlider" to="." method="_on_TechSlider_value_changed"]
[connection signal="pressed" from="C/M/R/CReturn/Return" to="." method="_on_Return_pressed"]
